[project]
name = "vrc-osc-chat"
version = "0.1.0"
description = "Terminal chatbox for VRChat with real-time system monitoring overlay"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "wings1848" },
]
keywords = ["vrchat", "osc", "chatbox", "system-monitor"]
dependencies = [
    "python-osc>=1.10.2",
]
